crates/typechecker/tests/errors/comparison_type_mismatch.dl
.decl Entry(id: int32, tag: string)
.decl Out(id: int32)
.input Entry(IO="file", filename="Entry.csv", delimiter=",")
.output Out
Out(id) :- Entry(id, tag), id = tag.
